# single-tape-turing-machine

./: Cargo.toml  README
examples/: binary_addition  palindrome_test  parentheses_checker  tets
src/: function.rs  lib.rs  machine.rs  main.rs  tape.rs
